# glhull

./: CMakeLists.txt  LICENSE.txt  README.md
data/: goblet.text
include/: cv_model.h  gl2_util.h
scripts/: run-tests.py
shaders/: curves.comp
src/: gldemo.c  glhull.c  mbhull.c
